15108
Suppose we have a script that begins with #! !#

{code}
#! scala
!#

val x = "line 4"
val y = "line 5"
val z "line 6"
{code}

With 2.7.7 the error messages are reasonable:-

{code}
(fragment of A.scala):5: error: '=' expected but string literal found.
val z "line 6"
       ^
{code}

With 2.8.0.r21134-b20100311102012 the reported line number is different and an irrelevant line of code is displayed:-

{code}
discarding <script preamble>
(fragment of A.scala):3: error: '=' expected but string literal found.
val x = "line 4"
                ^
{code}
